--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^5.1.3",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass": "^1.32.0",
