--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-router": "^3.2.0",
     "vuejs-avataaars": "^4.0.1",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
